--- a/.editorconfig
+++ b/.editorconfig
@@ -512,3 +512,8 @@ dotnet_diagnostic.S1135.severity = suggestion       # https://github.com/atc-net
 [*.{cs,csx,cake}]
 
 MA0051.maximum_lines_per_method = 100
+
+dotnet_diagnostic.CA2007.severity = none            # Consider calling ConfigureAwait on the awaited task
+
+dotnet_diagnostic.MA0004.severity = none            # Use Task.ConfigureAwait(false) as the current SynchronizationContext is not needed
+dotnet_diagnostic.MA0016.severity = none            # Prefer returning collection abstraction instead of implementation
