--- a/src/Atc.Azure.IoT.CLI/appsettings.example.json
+++ b/src/Atc.Azure.IoT.CLI/appsettings.example.json
@@ -10,10 +10,5 @@
     "UseTimestampUtc": false,
     "TimestampFormat": "HH:mm:ss:fff"
   },
-  "IsEncrypted": false,
-  "OpcUaSecurityOptions": {
-    "ApplicationCertificate": {
-      "SubjectName": ""
-    }
-  }
+  "IsEncrypted": false
 }
