--- a/.editorconfig
+++ b/.editorconfig
@@ -524,6 +524,7 @@ dotnet_diagnostic.S6605.severity = none             # Collection-specific "Exist
 MA0051.maximum_lines_per_method = 100
 
 dotnet_diagnostic.SA1010.severity = none            #
+dotnet_diagnostic.SA1402.severity = none            #
 
 dotnet_diagnostic.CA2007.severity = none            # Consider calling ConfigureAwait on the awaited task
 
