--- a/src/Atc.Azure.IoT/.editorconfig
+++ b/src/Atc.Azure.IoT/.editorconfig
@@ -1,8 +1,8 @@
 # ATC coding rules - https://github.com/atc-net/atc-coding-rules
 # Version: 1.0.9
-# Updated: 01-02-2022
-# Location: src/KL.Device.Communication.Domain.IoT
-# Distribution: DotNet7
+# Updated: 18-04-2024
+# Location: src/Atc.Azure.IoT
+# Distribution: DotNet8
 # Inspired by: https://docs.microsoft.com/en-us/dotnet/fundamentals/code-analysis/code-style-rule-options
 
 ##########################################
