--- a/src/Atc.Azure.IoTEdge.DeviceEmulator/.editorconfig
+++ b/src/Atc.Azure.IoTEdge.DeviceEmulator/.editorconfig
@@ -10,6 +10,7 @@
 ##########################################
 [*.{cs,csx,cake}]
 
+dotnet_diagnostic.CA1031.severity = none            # General Exception
 dotnet_diagnostic.CA1054.severity = none            # URI parameters should not be strings
 dotnet_diagnostic.CA5359.severity = none            # Do Not Disable Certificate Validation
 
