--- a/src/Atc.Azure.IoT/Atc.Azure.IoT.csproj
+++ b/src/Atc.Azure.IoT/Atc.Azure.IoT.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <PackageId>Atc.Azure.IoT</PackageId>
+    <PackageTags>azure;iot;dps;enrollment;iotedge</PackageTags>
+    <Description>Atc.Azure.IoT contains common services for Azure IotHub, DeviceProvisioningService (DPS), Iot edge devices, modules, and device twins.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Atc" Version="2.0.469" />
