--- a/.github/workflows/post-integration.yml
+++ b/.github/workflows/post-integration.yml
@@ -80,4 +80,6 @@ jobs:
       - name: 📦 Push packages to GitHub Package Registry
         run: |
           dotnet nuget push ${GITHUB_WORKSPACE}/packages/'Atc.Azure.IoT.'${NBGV_NuGetPackageVersion}'.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s ${{ env.NUGET_REPO_URL }} --skip-duplicate
+          dotnet nuget push ${GITHUB_WORKSPACE}/packages/'Atc.Azure.IoTEdge.'${NBGV_NuGetPackageVersion}'.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s ${{ env.NUGET_REPO_URL }} --skip-duplicate
+          dotnet nuget push ${GITHUB_WORKSPACE}/packages/'Atc.Azure.IoTEdge.DeviceEmulator.'${NBGV_NuGetPackageVersion}'.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s ${{ env.NUGET_REPO_URL }} --skip-duplicate
           dotnet nuget push ${GITHUB_WORKSPACE}/packages/'atc-azure-iot.'${NBGV_NuGetPackageVersion}'.nupkg' -k ${{ secrets.GITHUB_TOKEN }} -s ${{ env.NUGET_REPO_URL }} --skip-duplicate
