--- a/src/Atc.Azure.IoTEdge.DeviceEmulator/Atc.Azure.IoTEdge.DeviceEmulator.csproj
+++ b/src/Atc.Azure.IoTEdge.DeviceEmulator/Atc.Azure.IoTEdge.DeviceEmulator.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <PackageId>Atc.Azure.IoTEdge.DeviceEmulator</PackageId>
+    <PackageTags>azure;iot;iotedge;emulation;emulator</PackageTags>
+    <Description>Atc.Azure.IoTEdge.DeviceEmulator contains a device emulator which can be used to test e.g Direct Method invocations and local debugging</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Atc" Version="2.0.469" />
