--- a/src/Atc.Azure.IoTEdge/Atc.Azure.IoTEdge.csproj
+++ b/src/Atc.Azure.IoTEdge/Atc.Azure.IoTEdge.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <PackageId>Atc.Azure.IoTEdge</PackageId>
+    <PackageTags>azure;iot;iotedge</PackageTags>
+    <Description>Atc.Azure.IoTEdge contains various components for developing IoTEdge modules</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Atc" Version="2.0.469" />
