--- a/src/Atc.Azure.IoT.CLI/Atc.Azure.IoT.CLI.csproj
+++ b/src/Atc.Azure.IoT.CLI/Atc.Azure.IoT.CLI.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Atc" Version="2.0.469" />
     <PackageReference Include="Atc.Console.Spectre" Version="2.0.469" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
