--- a/.github/workflows/pre-integration.yml
+++ b/.github/workflows/pre-integration.yml
@@ -30,8 +30,13 @@ jobs:
       - name: 🔁 Restore packages
         run: dotnet restore
 
-      - name: 🛠️ Building library in release mode
-        run: dotnet build -c Release --no-restore
+      - name: 🛠️ Build non-wpf solution
+        run: dotnet build Atc.Azure.IoT-WithoutWpf.sln -c Release --no-restore
+        if: runner.os != 'Windows'
+
+      - name: 🛠️ Build all
+        run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore
+        if: runner.os == 'Windows'
 
   dotnet-test:
     runs-on: ubuntu-latest
@@ -51,8 +56,13 @@ jobs:
       - name: 🔁 Restore packages
         run: dotnet restore
 
-      - name: 🛠️ Build
-        run: dotnet build -c Release --no-restore /p:UseSourceLink=true
+      - name: 🛠️ Build non-wpf solution
+        run: dotnet build Atc.Azure.IoT-WithoutWpf.sln -c Release --no-restore /p:UseSourceLink=true
+        if: runner.os != 'Windows'
+
+      - name: 🛠️ Build all
+        run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
+        if: runner.os == 'Windows'
 
       - name: 🧪 Run unit tests
         run: dotnet test -c Release --no-build --filter "Category!=Integration"
