ci: adjust workflows for new wpf project

--- a/.github/workflows/post-integration.yml
+++ b/.github/workflows/post-integration.yml
@@ -42,10 +42,10 @@ jobs:
           distribution: 'zulu'
 
       - name: 🧹 Clean
-        run: dotnet clean -c Release && dotnet nuget locals all --clear
+        run: dotnet clean Atc.Azure.IoT.sln -c Release && dotnet nuget locals all --clear
 
       - name: 🔁 Restore packages
-        run: dotnet restore
+        run: dotnet restore Atc.Azure.IoT.sln
 
       - name: 🛠️ Build
         run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
