--- a/.github/workflows/pre-integration.yml
+++ b/.github/workflows/pre-integration.yml
@@ -24,11 +24,21 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: 🧹 Clean
-        run: dotnet clean -c Release && dotnet nuget locals all --clear
+      - name: 🧹 Clean non-wpf solution
+        run: dotnet clean Atc.Azure.IoT-WithoutWpf.sln -c Release && dotnet nuget locals all --clear
+        if: runner.os != 'Windows'
 
-      - name: 🔁 Restore packages
-        run: dotnet restore
+      - name: 🧹 Clean all
+        run: dotnet clean Atc.Azure.IoT.sln -c Release && dotnet nuget locals all --clear
+        if: runner.os == 'Windows'
+
+      - name: 🔁 Restore packages non-wpf solution
+        run: dotnet restore Atc.Azure.IoT-WithoutWpf.sln
+        if: runner.os != 'Windows'
+
+      - name: 🔁 Restore packages all
+        run: dotnet restore Atc.Azure.IoT.sln
+        if: runner.os == 'Windows'
 
       - name: 🛠️ Build non-wpf solution
         run: dotnet build Atc.Azure.IoT-WithoutWpf.sln -c Release --no-restore
@@ -54,15 +64,10 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: 🔁 Restore packages
-        run: dotnet restore
-
-      - name: 🛠️ Build non-wpf solution
-        run: dotnet build Atc.Azure.IoT-WithoutWpf.sln -c Release --no-restore /p:UseSourceLink=true
-        if: runner.os != 'Windows'
+        run: dotnet restore Atc.Azure.IoT.sln
 
       - name: 🛠️ Build all
         run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
-        if: runner.os == 'Windows'
 
       - name: 🧪 Run unit tests
         run: dotnet test -c Release --no-build --filter "Category!=Integration"
