--- a/.github/workflows/pre-integration.yml
+++ b/.github/workflows/pre-integration.yml
@@ -49,7 +49,7 @@ jobs:
         if: runner.os == 'Windows'
 
   dotnet-test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs:
       - dotnet-build
     steps:
