--- a/.github/workflows/post-integration.yml
+++ b/.github/workflows/post-integration.yml
@@ -51,7 +51,7 @@ jobs:
         run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
 
       - name: 🧪 Run unit tests
-        run: dotnet test -c Release --no-build --filter "Category!=Integration"
+        run: dotnet test Atc.Azure.IoT.sln -c Release --no-build --filter "Category!=Integration"
 
       - name: 🌩️ SonarCloud install scanner
         run: dotnet tool install --global dotnet-sonarscanner
