--- a/.github/workflows/pre-integration.yml
+++ b/.github/workflows/pre-integration.yml
@@ -70,4 +70,4 @@ jobs:
         run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
 
       - name: 🧪 Run unit tests
-        run: dotnet test -c Release --no-build --filter "Category!=Integration"
+        run: dotnet test Atc.Azure.IoT.sln -c Release --no-build --filter "Category!=Integration"
