--- a/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
+++ b/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Atc.Wpf" Version="2.0.505" />
     <PackageReference Include="Atc.Wpf.Controls" Version="2.0.505" />
     <PackageReference Include="Atc.Wpf.Theming" Version="2.0.505" />
+    <PackageReference Include="Fluent.Ribbon" Version="10.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
