--- a/src/Atc.Azure.IoT.Wpf.App/.editorconfig
+++ b/src/Atc.Azure.IoT.Wpf.App/.editorconfig
@@ -18,6 +18,7 @@ dotnet_diagnostic.MA0048.severity = none            # To support partial classes
 
 dotnet_diagnostic.MA0049.severity = none            # Type name should not match containing namespace (https://github.com/meziantou/Meziantou.Analyzer/blob/main/docs/Rules/MA0049.md)
 
+dotnet_diagnostic.S1075.severity = none             #
 dotnet_diagnostic.S4487.severity = none             #
 
 dotnet_diagnostic.CA1724.severity = none            #
