--- a/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
+++ b/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="Atc.Wpf.Theming" Version="2.0.505" />
     <PackageReference Include="Azure.Identity" Version="1.11.3" />
     <PackageReference Include="Azure.ResourceManager" Version="1.12.0" />
+    <PackageReference Include="Azure.ResourceManager.DeviceProvisioningServices" Version="1.2.0" />
+    <PackageReference Include="Azure.ResourceManager.IotHub" Version="1.1.1" />
     <PackageReference Include="Fluent.Ribbon" Version="10.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
