feat: WIP on IoTDevice

--- a/test/Atc.Azure.IoT.Tests/Atc.Azure.IoT.Tests.csproj
+++ b/test/Atc.Azure.IoT.Tests/Atc.Azure.IoT.Tests.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Atc.Azure.IoT\Atc.Azure.IoT.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
