--- a/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
+++ b/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
@@ -39,6 +39,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Atc.Azure.IoT\Atc.Azure.IoT.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\AppIcon.ico" />
   </ItemGroup>
 
