refact: Use ribbon-controls

--- a/src/Atc.Azure.IoT/Atc.Azure.IoT.csproj
+++ b/src/Atc.Azure.IoT/Atc.Azure.IoT.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Atc.Azure.IoT.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Atc" Version="2.0.478" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.Devices" Version="1.39.1" />
