--- a/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
+++ b/src/Atc.Azure.IoT.Wpf.App/Atc.Azure.IoT.Wpf.App.csproj
@@ -11,6 +11,8 @@
     <None Remove="appsettings.json" />
     <None Remove="Resources\AppIcon.ico" />
     <None Remove="Resources\Images\32\AzureSignIn.png" />
+    <None Remove="Resources\Images\32\linux.svg" />
+    <None Remove="Resources\Images\32\windows.svg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +51,8 @@
 
   <ItemGroup>
     <Resource Include="Resources\AppIcon.ico" />
+    <Resource Include="Resources\Images\32\linux.svg" />
+    <Resource Include="Resources\Images\32\windows.svg" />
   </ItemGroup>
 
 </Project>
