--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,13 +33,13 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: 🧹 Clean
-        run: dotnet clean Atc.Azure.IoT.sln -c Release && dotnet nuget locals all --clear
+        run: dotnet clean Atc.Azure.IoT.slnx -c Release && dotnet nuget locals all --clear
 
       - name: 🔁 Restore packages
-        run: dotnet restore Atc.Azure.IoT.sln
+        run: dotnet restore Atc.Azure.IoT.slnx
 
       - name: 🛠️ Building library in release mode
-        run: dotnet build Atc.Azure.IoT.sln -c Release --no-restore /p:UseSourceLink=true
+        run: dotnet build Atc.Azure.IoT.slnx -c Release --no-restore /p:UseSourceLink=true
 
       - name: ⏩ Merge to release-branch
         run: |
@@ -50,7 +50,7 @@ jobs:
           git push origin release
 
       - name: 🗳️ Creating library package for release
-        run: dotnet pack Atc.Azure.IoT.sln -c Release --no-restore -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH_NAME /p:PublicRelease=true
+        run: dotnet pack Atc.Azure.IoT.slnx -c Release --no-restore -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH_NAME /p:PublicRelease=true
 
       - name: 📦 Push packages to NuGet
         run: |
