chore: suppress CA1308

--- a/.editorconfig
+++ b/.editorconfig
@@ -581,6 +581,7 @@ dotnet_diagnostic.SA1402.severity = none            #
 dotnet_diagnostic.SA1615.severity = none            #
 
 dotnet_diagnostic.CA1002.severity = none            #
+dotnet_diagnostic.CA1308.severity = none            # Normalize strings to uppercase https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1308
 dotnet_diagnostic.CA2007.severity = none            # Consider calling ConfigureAwait on the awaited task
 
 dotnet_diagnostic.MA0004.severity = none            # Use Task.ConfigureAwait(false) as the current SynchronizationContext is not needed
