--- a/test/Atc.Azure.IoT.Tests/Atc.Azure.IoT.Tests.csproj
+++ b/test/Atc.Azure.IoT.Tests/Atc.Azure.IoT.Tests.csproj
@@ -6,4 +6,12 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Atc" Version="2.0.552" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Atc.Azure.IoT\Atc.Azure.IoT.csproj" />
+  </ItemGroup>
+
 </Project>
